# chess_bot

./: CMakeLists.txt  README.md  crazyhouse  main  main.cpp  move.c++  move.h  player.c++  player.h  table.c++  table.h  xboard.debug
overhaul/: board.c++  board.h  crazyhouse  main.c++  makefile  metal_pipe_falling_sound_effect  move.c++  move.h  piece.c++  piece.h  player.c++  player.h  test  xboard.debug
overhaul/debug/: debug.c++  debug.h
overhaul/pieces/: bishop.c++  bishop.h  king.c++  king.h  knight.c++  knight.h  pawn.c++  pawn.h  queen.c++  queen.h  rook.c++  rook.h
overhaul/protocol/: protocol.c++  protocol.cpp  protocol.h
pieces/: all_pieces.h  bishop.c++  bishop.h  extra.h  king.c++  king.h  knight.c++  knight.h  pawn.c++  pawn.h  piece.c++  piece.h  queen.c++  queen.h  rook.c++  rook.h
protocol/: protocol.c++  protocol.h
